argocd/system/blog/service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: blog
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  namespace: blog
  name: blog
spec:
  selector:
    app: blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
