argocd/system/blog/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  namespace: blog

spec:
  tls:
    - hosts:
        - fszarek.me
      secretName: blog-tls
  rules:
    - host: fszarek.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog
                port:
                  number: 80
